--- a/STest.App/STest.App/STest.App.csproj
+++ b/STest.App/STest.App/STest.App.csproj
@@ -72,6 +72,12 @@
     </Page>
   </ItemGroup>
 
+  <ItemGroup>
+    <Page Update="Controls\ConfirmationButton.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+
     <!-- Publish Properties -->
   <PropertyGroup>
     <PublishReadyToRun Condition="'$(Configuration)' == 'Debug'">False</PublishReadyToRun>
