--- a/STest.App/STest.App/STest.App.csproj
+++ b/STest.App/STest.App/STest.App.csproj
@@ -14,6 +14,7 @@
     <None Remove="AppWindows\ErrorWindow.xaml" />
     <None Remove="AppWindows\LoginWindow.xaml" />
     <None Remove="Pages\Builder\BuilderPage.xaml" />
+    <None Remove="Pages\DialogContent\ContentDialogContent.xaml" />
     <None Remove="Pages\Home\HomePage.xaml" />
     <None Remove="Pages\Settings\SettingsPage.xaml" />
   </ItemGroup>
@@ -29,6 +30,7 @@
     <PackageReference Include="NLog" Version="5.4.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.4.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.4.0" />
+    <PackageReference Include="System.Text.Json" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -87,6 +89,12 @@
 
   <ItemGroup>
     <Page Update="Pages\Builder\BuilderPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Pages\DialogContent\ContentDialogContent.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
