--- a/STest.App/STest.App/STest.App.csproj
+++ b/STest.App/STest.App/STest.App.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <None Remove="AppWindows\ErrorWindow.xaml" />
     <None Remove="AppWindows\LoginWindow.xaml" />
+    <None Remove="AppWindows\TestPreviewWindow.xaml" />
     <None Remove="Pages\Builder\BuilderPage.xaml" />
     <None Remove="Pages\DialogContent\ContentDialogContent.xaml" />
     <None Remove="Pages\Home\HomePage.xaml" />
@@ -24,9 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250310001" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" />
     <PackageReference Include="NLog" Version="5.4.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.4.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.4.0" />
@@ -49,6 +50,12 @@
     <EmbeddedResource Update="Resources\Languages\Language.uk-UA.resx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="AppWindows\TestPreviewWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <ItemGroup>
